--- a/templates/accounts/details_profile.html
+++ b/templates/accounts/details_profile.html
@@ -1,82 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <!-- Starts Head Section -->
-  <head>
-    <link rel="stylesheet" href="/staticfiles/css/styles.css" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="/staticfiles/images/free-30-instagram-stories-icons23_122570.png"
-    />
-    <title>Petstagram</title>
-  </head>
-  <!-- End Head Section -->
+{% extends 'base.html' %}
+{% load static %}
 
-  <!-- Starts Body Section -->
-  <body>
-    <!-- Starts Header Section with Navigation Bar -->
-    <header>
-      <nav class="navbar">
-        <div class="container">
-          <div class="logo">
-            <!-- Link to Home Page -->
-            <a href="#">
-              <img
-                width="50px"
-                src="/staticfiles/images/free-30-instagram-stories-icons23_122570.png"
-                alt="img1"
-              />
-            </a>
-
-            <!-- Link to Home Page -->
-            <a class="home" href="#">
-              <i>Petstagram</i>
-            </a>
-          </div>
-
-          <div class="nav-links">
-            <ul class="nav-group">
-              <li class="nav-item">
-                <!-- Link to Add Pet Page -->
-                <a href="#">
-                  <i>Add Pet</i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <!-- Link to Add Photo Page -->
-                <a href="#">
-                  <i>Add Photo</i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <!-- Link to Profile Page -->
-                <a href="#">
-                  <i>Profile</i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <!-- Log out -->
-                <a href="#">
-                  <i>Log out</i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <!-- End Header Section with Navigation Bar -->
-
-    <!-- Starts Main Section -->
-    <main>
-      <!-- Start Profile Details Section -->
+{% block main_content %}
+     <!-- Start Profile Details Section -->
       <div class="profile">
         <!-- Start Profile Personal Data Section -->
         <div class="profile-data">
           <div class="profile_img">
             <div class="image">
               <!-- Profile Image -->
-              <img src="/staticfiles/images/person.png" alt="img8" />
+              <img src="{% static '/images/person.png' %}" alt="img8" />
             </div>
           </div>
           <div class="personal">
@@ -89,7 +22,7 @@
               <a href="#">
                 <img
                   class="edit-img"
-                  src="/staticfiles/images/edit-pen-icon-6.jpg"
+                  src="{% static '/images/edit-pen-icon-6.jpg' %}"
                   alt="edit button"
                 />
               </a>
@@ -98,7 +31,7 @@
               <a href="">
                 <img
                   class="bin-img"
-                  src="/staticfiles/images/icon-remove-22.jpg"
+                  src="{% static '/images/icon-remove-22.jpg' %}"
                   alt="bin button"
                 />
               </a>
@@ -308,15 +241,7 @@
       </div>
 
       <!-- End Profile Details Section -->
-    </main>
-    <!-- End Main Section -->
+{% endblock %}
 
-    <!-- Start Footer Section -->
-    <div class="footer">
-      <span class="footer-section">
-        © 2024 SOFTUNI WORKSHOP FOR PYTHON WEB MODULE
-      </span>
-    </div>
-    <!-- End Footer Section -->
   </body>
 </html>
