--- a/templates/pets/pet-edit-page.html
+++ b/templates/pets/pet-edit-page.html
@@ -1,19 +1,20 @@
 {% extends 'base.html' %}
 {% block main_content %}
+    {% load static %}
 <!-- Starts Main Section -->
 <main>
     <!-- Start Edit Pet Section -->
     <div class="edit-delete edit-photo">
         <h2>Edit Pet</h2>
         <!-- Start Edit Pet From -->
-        <form action="{% url 'edit pet' username=username pet_slug=pet.slug %}" method="post">
-          {{ pet_form.as_p }}
+        <form action="{% url 'edit pet' username=username pet_slug=object.slug %}" method="post">
+          {{ form.as_p }}
             {% csrf_token %}
             <button class="edit-btn" type="submit">Edit</button>
         </form>
         <!-- End Edit Pet Form -->
 <h3>Current Image: </h3>
-        <img height="60" src="{{ pet.pet_photo }}" alt="Image of {{ pet.name }} ">
+        <img height="60" src="{{ object.pet_photo }}" alt="Image of {{ object.name }} ">
     </div>
     <!-- End Edit Pet Section -->
 
