--- a/templates/pets/pet-add-page.html
+++ b/templates/pets/pet-add-page.html
@@ -5,7 +5,7 @@
     <div class="edit-delete edit-photo">
         <h2>Add pet</h2>
     <form action="{% url 'create pet' %}" method="post">
-        {{ pet_form.as_p }}
+        {{ form.as_p }}
         <button class="add-btn" type="submit">Add Pet</button>
         {%  csrf_token %}
     </form>
