--- a/templates/partials/layout/header.html
+++ b/templates/partials/layout/header.html
@@ -42,7 +42,7 @@
                     <li class="nav-item">
 
                         <!-- Log out -->
-                        <a href="{% url 'logout' %}">
+                        <a href="">
                             <i>Log out</i>
                         </a>
                     
