--- a/templates/common/home-page.html
+++ b/templates/common/home-page.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
+
 {% load static %}
+
+{% load paging %}
 
 {% block main_content %}
     <div class="container">
@@ -7,7 +10,8 @@
 
             <!-- Start Searchbar Form -->
             <form class="searchbar" action="{% url 'index' %}" method="get">
-                <input type="text" name="pet_name_pattern" placeholder="Search by pet name..." value="{{ pet_name_pattern }}">
+                <input type="text" name="pet_name_pattern" placeholder="Search by pet name..." 
+                       value="{{ pet_name_pattern }}">
                 
                 <button>
                     <img src="{% static 'images/search.png' %}" height="18" alt="img2">
@@ -16,8 +20,22 @@
             <!-- End Searchbar Form -->
 
            <!-- Start Pet Photos Post Section -->
-            {% include 'partials/pet-post.html' with photo_list=pet_photos %}
+            {% include 'partials/pet-post.html' with photo_list=object_list %}
             <!-- End Pet Photos Post Section -->
+            
+             <!-- Start Pagination -->
+            <div class="pagination">
+                <span class="current">
+                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                </span>
+
+                <span class="step-links-buttons">
+                
+                    {% prev_button %}
+                    {% next_button %}
+                </span>
+            </div>
+            <!-- End Pagination -->
         </div>
     </div>
 {% endblock %}
