Finish all the class based views, BUT the app still has a bug in pet photo details.

--- a/templates/photos/photo-details-page.html
+++ b/templates/photos/photo-details-page.html
@@ -4,13 +4,14 @@
 <!-- Starts Main Section -->
     <div class="container">
         <div class="col-9">
-            {% include 'partials/pet-photo-list-item-card.html' with photo=pet_photo %}
-            <p class="pet-details">{{ pet_photo.description }}</p>
+        <a href="{% url "edit photo" pk=object.pk %}">Edit</a>
+            {% include 'partials/pet-photo-list-item-card.html' with photo=object %}
+            <p class="pet-details">{{ object.description }}</p>
 
-            <h5 class="postTime">{{ pet_photo.created_at }}</h5>
+            <h5 class="postTime">{{ object.created_at }}</h5>
 
            <div class="comments">
-                {% for comment in pet_photo.photocomment_set.all %}
+                {% for comment in object.photocomment_set.all %}
                     <div class="top">
                         <div class="userDetails">
                             <div class="comment-data">
@@ -22,7 +23,7 @@
                                     </div>
                                 </div>
                                 <p>
-                                    <a href="{% url 'details profile' pk=1 %}">Steven Ivanov</a>
+                                    <a href="{% url 'details profile' pk=1 %}">Maria-Yoana</a>
                                     <!-- User Comment -->
                                      {{ comment.text }}
                                 </p>
@@ -32,7 +33,7 @@
                     </div>
                 {% endfor %}
             </div>
-            <!-- End Comments Section -->
+
         </div>
 
     </div>
