--- a/templates/accounts/signup_user.html
+++ b/templates/accounts/signup_user.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load filters %}
 
 {% block main_content %}
     <!-- Start Register Section -->
@@ -7,17 +8,22 @@
             <h1>Petstagram</h1>
 
             <!-- Start Register Form -->
-            <form action="">
-                <input type="text" placeholder="Username">
-
-                <input type="email" placeholder="Email">
-
-                <input type="password" placeholder="Password">
-
-                <input type="password" placeholder="Repeat Password">
-
+            <form action="{% url 'signup user' %}" method="post">
+                <p>
+                    {{ form.email|placeholder:"Email" }}
+                </p>
+                
+                <p>
+                    {{ form.password1|placeholder:"Password" }}
+                </p>
+                
+                <p>
+                    {{ form.password2|placeholder:"Confirm Password" }}
+                </p>
                 <!-- Register Button -->
                 <button type="submit">Register</button>
+                {% csrf_token %}
+                
             </form>
             <!-- End Register Form -->
 
