--- a/templates/accounts/details_profile.html
+++ b/templates/accounts/details_profile.html
@@ -10,7 +10,7 @@
             <div class="image">
                 {% if object.profile.picture %}
               <!-- Profile Image -->
-              <img src="{% object.profile_picture.url %}" alt="img8" />
+              <img src="{{ object.profile_picture.url }}" alt="img8" />
                 {% else %}
                  <img src="{% static '/images/person.png' %}" alt="img8" />
                 {% endif %}
@@ -58,13 +58,14 @@
               <p>likes</p>
             </div>
             <!-- User First and Last Name IF Added -->
-            <h3 class="names">Diyan Kalaydziev</h3>
-
+          {% if object.full_name %}
+            <h3 class="names">{{ object.full_name }}</h3>
+            {% endif %}
+          {% if object.date_of_birth %}
+            {{ object.date_of_birth }}
+          {% endif %}
             <!-- User Email Address -->
-            <p class="email">d.denov@gmail.com</p>
-
-            <!-- User Gender IF Added -->
-            <p class="gender">Male</p>
+            <p class="email">{{ object.user.email}}</p>
           </div>
         </div>
         <!-- End Profile Personal Data Section -->
