--- a/templates/accounts/details_profile.html
+++ b/templates/accounts/details_profile.html
@@ -46,15 +46,15 @@
             </div>
             <div class="data">
               <!-- Total Number of Photos by the User -->
-              <span>4</span>
+              <span>{{ num_photos }}</span>
               <p>photos</p>
 
               <!-- Total Number of Pets owned by the User -->
-              <span>7</span>
+              <span>{{ num_pets }}</span>
               <p>pets</p>
 
               <!-- Total Number of Likes for the User -->
-              <span>436</span>
+              <span>{{ num_likes }}</span>
               <p>likes</p>
             </div>
             <!-- User First and Last Name IF Added -->
@@ -71,183 +71,45 @@
         <!-- End Profile Personal Data Section -->
 
         <!-- Start Pets Data Section -->
+ 
         <div class="pets">
           <div class="statuses">
-            <!-- Start 1st Pet Details Page -->
-            <!-- Link to First Pet Details Page -->
+           
+              {% for pet in pets %}
             <a href="#">
               <div class="head-pet">
                 <div class="status">
                   <div class="image">
                     <!-- Pet Image -->
-                    <img
-                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgoIHq82qLYnvomfz5ZkW5CLQ8VNxCyI-hUw&usqp=CAU"
-                      alt="pet img"
-                    />
+                    <img src="{{ pet.pet_photo }}" alt="pet img" />
                   </div>
                 </div>
                 <!-- Pet Name -->
-                <p>Sasho</p>
+                <p>{{ pet.name }}</p>
               </div>
             </a>
+            {% endfor %}
             <!-- End 1st Pet Details Page -->
-
-            <!-- Start 2nd Pet Details Page -->
-            <!-- Link to Second Pet Details Page -->
-            <a href="#">
-              <div class="head-pet">
-                <div class="status">
-                  <div class="image">
-                    <!-- Pet Image -->
-                    <img
-                      src="https://cdn.pixabay.com/photo/2016/12/13/05/15/puppy-1903313__340.jpg"
-                      alt="pet img"
-                    />
-                  </div>
-                </div>
-                <!-- Pet Name -->
-                <p>Todi</p>
-              </div>
-            </a>
-            <!-- End 2nd Pet Details Page -->
-
-            <!-- Start 3rd Pet Details Page -->
-            <!-- Link to Pet Details Page -->
-            <a href="#">
-              <div class="head-pet">
-                <div class="status">
-                  <div class="image">
-                    <img
-                      src="https://images.unsplash.com/photo-1611003228941-98852ba62227?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8YmFieSUyMGRvZ3xlbnwwfHwwfHw%3D&w=1000&q=80"
-                      alt="pet img"
-                    />
-                  </div>
-                </div>
-                <p>Mihail</p>
-              </div>
-            </a>
-            <!-- End 3rd Pet Details Page -->
-
-            <!-- Start 4th Pet Details Page -->
-            <!-- Link to Pet Details Page -->
-            <a href="#">
-              <div class="head-pet">
-                <div class="status">
-                  <div class="image">
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
-                      alt="pet img"
-                    />
-                  </div>
-                </div>
-                <p>Petar</p>
-              </div>
-            </a>
-            <!-- End 4th Pet Details Page -->
-
-            <!-- Start 5th Pet Details Page -->
-            <!-- Link to Pet Details Page -->
-            <a href="#">
-              <div class="head-pet">
-                <div class="status">
-                  <div class="image">
-                    <img
-                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdKYe00NaD5SQjIMvXYPssq0r1dXJggL3ZIg&usqp=CAU"
-                      alt="pet img"
-                    />
-                  </div>
-                </div>
-                <p>Stamat</p>
-              </div>
-            </a>
-            <!-- End 5th Pet Details Page -->
-
-            <!-- Start 6th Pet Details Page -->
-            <!-- Link to Pet Details Page -->
-            <a href="#">
-              <div class="head-pet">
-                <div class="status">
-                  <div class="image">
-                    <img
-                      src="https://cf.ltkcdn.net/small-pets/images/orig/278587-1600x1066-goldfish-swimming-in-fish-tank.jpg"
-                      alt="pet img"
-                    />
-                  </div>
-                </div>
-                <p>Toni</p>
-              </div>
-            </a>
-            <!-- End 6th Pet Details Page -->
-
-            <!-- Start 7th Pet Details Page -->
-            <!-- Link to Pet Details Page -->
-            <a href="#">
-              <div class="head-pet">
-                <div class="status">
-                  <div class="image">
-                    <img
-                      src="https://i.pinimg.com/736x/01/6f/72/016f72c5812e1b8f71bdbf19d8c7558b.jpg"
-                      alt="pet img"
-                    />
-                  </div>
-                </div>
-                <p>Daisy</p>
-              </div>
-            </a>
-            <!-- End 7th Pet Details Page -->
           </div>
         </div>
         <!-- End Pets Data Section -->
-
-        <!-- Start Last Uploaded Photos Section -->
+    
+          {% for photo in user_photos %}
         <div class="pet-photos">
-          <!-- Link to Last Uploaded Pet Photo -->
-          <a href="#">
+                <a href="{% url 'details photo' photo.id %}">
             <!-- Pet Photo -->
-            <img
-              src="https://i.natgeofe.com/n/de94c416-6d23-45f5-9708-e8d56289268e/naturepl_01132178.jpg?w=636&h=631"
-              alt="pet img"
-            />
-          </a>
-
-          <!-- Link to Uploaded Pet Photo -->
-          <a href="#">
-            <!-- Pet Photo -->
-            <img
-              src="https://cf.ltkcdn.net/small-pets/images/orig/278587-1600x1066-goldfish-swimming-in-fish-tank.jpg"
-              alt="pet img"
-            />
-          </a>
-
-          <!-- Link to Uploaded Pet Photo -->
-          <a href="#">
-            <!-- Pet Photo -->
-            <img
-              src="https://thumbs.dreamstime.com/b/small-golden-retriever-puppy-6482030.jpg"
-              alt="pet img"
-            />
-          </a>
-
-          <!-- Link to  Uploaded Pet Photo -->
-          <a href="#">
-            <!-- Pet Photo -->
-            <img
-              src="https://i.pinimg.com/originals/4e/55/83/4e5583748bc4000805df50e4ebcafffc.png"
-              alt="pet img"
-            />
-          </a>
+                    <img src="{{ photo.photo.url }}" alt="pet img">
+                </a>
         </div>
-        <!-- End Last Uploaded Photos Section -->
-
         <!-- IF NO Posts Show No Post Image -->
-
+{% empty %}
         <img
           class="no-posts"
           src="/staticfiles/images/no_posts.png"
           alt="no posts"
         />
       </div>
-
+{% endfor %}
       <!-- End Profile Details Section -->
 {% endblock %}
 
