--- a/templates/partials/pet-photo-list-item-card.html
+++ b/templates/partials/pet-photo-list-item-card.html
@@ -7,11 +7,11 @@
                 <div class="profilepic">
                     <div class="profile_img">
                         <div class="image">
-                            {% if photo.user.progile.profile_picture %}
+                            {% if photo.user.profile.profile_picture %}
                             
                                 <img src="{{ photo.user.profile.profile_picture }}" alt="img8">
                             {% else %}
-                            <img src="{% static 'images/person.org' %}" alt="img8">
+                            <img src="{% static 'images/person.png' %}" alt="img8">
                             {% endif %}
                         
                         </div>
@@ -19,7 +19,7 @@
                 </div>
             </a>
             <h3>
-                <a href="{% url 'details profile' photo.user.pk %}">
+                <a href="{% url 'details profile' pk=1 %}">
                   
                 </a>
                 <br>
@@ -34,7 +34,7 @@
         <div class="actionBtns">
             <div class="left">
                 <span class="heart">
-                   <a href="{% url 'like_pet_photo' pk=1 %}">
+                   <a href="{% url 'like_pet_photo' pk=photo.pk %}">
                         {% if photo.photolike_set.count > 0 %}
                             <i class="fa-solid fa-heart" style="color: #ed4040;"></i>
                         {% else %}
@@ -58,17 +58,16 @@
             </a>
         {% endfor %}
 
-        <a href="{% url 'details photo' pk=1 %}">
+        <a href="{% url 'details photo' pk=photo.pk %}">
             <h4 class="details">See details</h4>
         </a>
 
         <h5 class="postTime">{{ photo.created_at|date:'d/m/Y' }}</h5>
 
         <div class="addComments">
-            <form method="post" action="#">
-                <label for="id_body">Body:</label>
-                <textarea name="body" cols="40" rows="10" placeholder="Add comment..." maxlength="300"
-                          required="" id="id_body"></textarea>
+            <form method="post" action="{% url 'add comment' photo.id %}">
+                {% csrf_token %}
+                {{ comment_form }}
                 <button type="submit">Post</button>
             </form>
         </div>
